Fixed modal links and management table glyphicon spacing

--- a/app/resources/styles/sass/management/_management.scss
+++ b/app/resources/styles/sass/management/_management.scss
@@ -1,4 +1,6 @@
 .note-table .glyphicon,
+.idea-table .glyphicon,
+.fp-table .glyphicon,
 .notification-table .glyphicon,
 .schedule-table .glyphicon,
 .service-table .glyphicon {
